[gd_scene load_steps=7 format=3 uid="uid://c2xh0mk8fqgw7"]

[ext_resource type="Script" uid="uid://cd845yk4pmc21" path="res://Scripts/UI/UI.gd" id="1"]
[ext_resource type="Script" uid="uid://tr6jdl0qav4j" path="res://Scripts/UI/HUD.gd" id="2"]
[ext_resource type="Script" uid="uid://cbcf8obhg5q6c" path="res://Scripts/Inventory/Inventory.gd" id="3"]
[ext_resource type="Script" uid="uid://b2000wsvepbco" path="res://Scripts/UI/PauseMenu.gd" id="4"]
[ext_resource type="Script" uid="uid://cxtwmfq056drc" path="res://Scripts/UI/SettingsMenu.gd" id="5"]
[ext_resource type="Script" uid="uid://5yy8lmxqar2u" path="res://Scripts/UI/TransitionLayer.gd" id="6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="StatsContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_constants/separation = 12

[node name="EnergyBar" type="HBoxContainer" parent="HUD/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnergyLabel" type="Label" parent="HUD/StatsContainer/EnergyBar"]
layout_mode = 2
text = "Energy"

[node name="ProgressBar" type="TextureProgressBar" parent="HUD/StatsContainer/EnergyBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
value = 1.0

[node name="HungerBar" type="HBoxContainer" parent="HUD/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HungerLabel" type="Label" parent="HUD/StatsContainer/HungerBar"]
layout_mode = 2
text = "Hunger"

[node name="ProgressBar" type="TextureProgressBar" parent="HUD/StatsContainer/HungerBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
value = 1.0

[node name="ThirstBar" type="HBoxContainer" parent="HUD/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ThirstLabel" type="Label" parent="HUD/StatsContainer/ThirstBar"]
layout_mode = 2
text = "Thirst"

[node name="ProgressBar" type="TextureProgressBar" parent="HUD/StatsContainer/ThirstBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
value = 1.0

[node name="SubtitleContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -180.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="SubtitlePanel" type="PanelContainer" parent="HUD/SubtitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SubtitleLabel" type="RichTextLabel" parent="HUD/SubtitleContainer/SubtitlePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
autowrap_mode = 2

[node name="CompassContainer" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="CompassPanel" type="PanelContainer" parent="HUD/CompassContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/CompassContainer/CompassPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CompassBar" type="Control" parent="HUD/CompassContainer/CompassPanel/VBoxContainer"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2

[node name="DirectionMarkers" type="Control" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar"]
anchors_preset = 0
mouse_filter = 2

[node name="North" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "N"

[node name="NorthEast" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "NE"

[node name="East" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "E"

[node name="SouthEast" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "SE"

[node name="South" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "S"

[node name="SouthWest" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "SW"

[node name="West" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "W"

[node name="NorthWest" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar/DirectionMarkers"]
layout_mode = 0
text = "NW"

[node name="CenterIndicator" type="TextureRect" parent="HUD/CompassContainer/CompassPanel/VBoxContainer/CompassBar"]
layout_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="DegreesLabel" type="Label" parent="HUD/CompassContainer/CompassPanel/VBoxContainer"]
layout_mode = 2
text = "0Â°"

[node name="InteractionPromptContainer" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="PromptPanel" type="PanelContainer" parent="HUD/InteractionPromptContainer"]
visible = false
custom_minimum_size = Vector2(300, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/InteractionPromptContainer/PromptPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="KeyIcon" type="Label" parent="HUD/InteractionPromptContainer/PromptPanel/HBoxContainer"]
layout_mode = 2
text = "[E]"

[node name="PromptLabel" type="Label" parent="HUD/InteractionPromptContainer/PromptPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Interact"
autowrap_mode = 2

[node name="InventoryMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="DimBackground" type="ColorRect" parent="InventoryMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="InventoryPanel" type="PanelContainer" parent="InventoryMenu"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryMenu/InventoryPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="InventoryMenu/InventoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="InventoryMenu/InventoryPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Inventory"

[node name="Spacer" type="Control" parent="InventoryMenu/InventoryPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="InventoryMenu/InventoryPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryMenu/InventoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ItemGrid" type="GridContainer" parent="InventoryMenu/InventoryPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 6

[node name="ItemInfoPanel" type="PanelContainer" parent="InventoryMenu/InventoryPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ItemInfoLabel" type="RichTextLabel" parent="InventoryMenu/InventoryPanel/VBoxContainer/ItemInfoPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
autowrap_mode = 2

[node name="ActionContainer" type="HBoxContainer" parent="InventoryMenu/InventoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="InventoryMenu/InventoryPanel/VBoxContainer/ActionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UseButton" type="Button" parent="InventoryMenu/InventoryPanel/VBoxContainer/ActionContainer"]
layout_mode = 2
text = "Use Item"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="DimBackground" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="PanelContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MenuPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "PAUSED"

[node name="HSeparator" type="HSeparator" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")

[node name="DimBackground" type="ColorRect" parent="SettingsMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="PanelContainer" parent="SettingsMenu"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Settings"

[node name="Spacer" type="Control" parent="SettingsMenu/SettingsPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="SettingsMenu/SettingsPanel/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="UI_UX" type="ScrollContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer"]
layout_mode = 2
follow_focus = true
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="VideoSection" type="VBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection"]
layout_mode = 2
text = "Video Settings"

[node name="ResolutionContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResolutionLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FullscreenLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckBox" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/FullscreenContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VSyncLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/VSyncContainer"]
layout_mode = 2
text = "VSync"

[node name="VSyncCheck" type="CheckBox" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/VideoSection/VSyncContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection"]
layout_mode = 2
text = "Audio Settings"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MasterLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="SFXVolumeContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFXLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MusicVolumeContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/UI_UX/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Controls" type="ScrollContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
follow_focus = true
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="ControlsInfo" type="Label" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
text = "Configure your controls below."
autowrap_mode = 2

[node name="ControlsList" type="VBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer/TabContainer/Controls/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ButtonContainer" type="HBoxContainer" parent="SettingsMenu/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="SettingsMenu/SettingsPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="SettingsMenu/SettingsPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Apply"

[node name="BackButton" type="Button" parent="SettingsMenu/SettingsPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Back"

[node name="TransitionLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6")

[node name="TransitionRect" type="ColorRect" parent="TransitionLayer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
